Fix bug where anchorlist items were inaccessible due to lack of z-index

--- a/src/main/frontend/styles/partials/_hero.scss
+++ b/src/main/frontend/styles/partials/_hero.scss
@@ -241,6 +241,7 @@
   position: absolute;
   border-left: 2px solid $color-grayscale-30;
   padding-left: 1em;
+  z-index: 1;
 
   &--hidden {
     display: none;
